Reducing to critical